Benchmarks and minor optimizations.